--- a/public/services.html
+++ b/public/services.html
@@ -63,6 +63,10 @@
                     <img src="./images/IconFacebookColored.png">
                 </a></div>
                 <div class="channel-card"><a href="https://www.foody.vn/thuong-hieu/ivo-deli-banh-mi-hotdog-kem-y-gelato">
+                    <ul style="color: #d8239c;">instagram</ul>
+                    <img src="./images/IconInstagramColored.png">
+                </a></div>
+                <div class="channel-card"><a href="https://www.foody.vn/thuong-hieu/ivo-deli-banh-mi-hotdog-kem-y-gelato">
                     <ul style="color: #ad2d2d;">Foody</ul>
                     <img src="./images/IconFoodyColored.png">
                 </a></div>
@@ -80,40 +84,45 @@
         <div style="text-align: center; margin-top: 50px; width: 100%; font-size: 80pt; font-family: 'Masterplan'; color: #1ac4ee;">
             WE also have pizza and gelato for wholesale
         </div>
-        <div style="text-align: center; margin-top: 10px; width: 100%; font-size: 30pt; font-family: 'Masterplan'; color: #1ac4ee; opacity: 0.6;">
-            Many sorbets for choosing
-        </div>
-        <div class="products-cards" style="display: inline;" id="products-cards">
-            <div class="products-cards">
-                <div class="product-card">
-                    <img src="./images/CardChocolate.png">
-                    <ul style="color: #402010;">Chocolate</ul>
+        <div class="products-cards" id="products-cards">
+            <div style="width: 70%">
+                <div style="text-align: center; margin-top: 10px; width: 100%; font-size: 30pt; font-family: 'Masterplan'; color: #1ac4ee; opacity: 0.6;">
+                    Many sorbets for choosing
                 </div>
-                <div class="product-card">
-                    <img src="./images/CardCoconut.png">
-                    <ul style="color: #89604b;" id="coconut">Coconut</ul>
+                <div class="products-cards">
+                    <div class="product-card-gelato">
+                        <img src="./images/CardChocolate.png">
+                        <ul style="color: #402010;">Chocolate</ul>
+                    </div>
+                    <div class="product-card-gelato">
+                        <img src="./images/CardCoconut.png">
+                        <ul style="color: #89604b;" id="coconut">Coconut</ul>
+                    </div>
+                    <div class="product-card-gelato">
+                        <img src="./images/CardVanilla.png">
+                        <ul style="color: #7a4a41;">Vanilla</ul>
+                    </div>
                 </div>
-                <div class="product-card">
-                    <img src="./images/CardVanilla.png">
-                    <ul style="color: #7a4a41;">Vanilla</ul>
+                <div class="products-cards">
+                    <div class="product-card-gelato">
+                        <img src="./images/CardStrawberry.png">
+                        <ul style="color: #b71020;" id="strawberry">Strawberry</ul>
+                    </div>
+                    <div class="product-card-gelato">
+                        <img src="./images/CardDurian.png">
+                        <ul style="color: #5a4e17;" id="durian">Durian & Sugar Cane</ul>
+                    </div>
+                    <div class="product-card-gelato">
+                        <img src="./images/CardMango.png">
+                        <ul style="color: #e68d00;" id="mango">Mango</ul>
+                    </div>
                 </div>
-                <div class="product-card">
-                    <img src="./images/CardStrawberry.png">
-                    <ul style="color: #b71020;" id="strawberry">Strawberry</ul>
-                </div>
-                <div class="product-card">
-                    <img src="./images/CardDurian.png">
-                    <ul style="color: #5a4e17;" id="durian">Durian & Sugar Cane</ul>
-                </div>
-                <div class="product-card">
-                    <img src="./images/CardMango.png">
-                    <ul style="color: #e68d00;" id="mango">Mango</ul>
-                </div>
+                <div class="blank-space-resize"></div>
             </div>
         </div>
         <div style="display: flex; width: 100%; justify-content: center; ">
-            <div style="text-align: center; margin-top: 40px; width: 15%; font-size: 30pt; font-family: 'Masterplan'; background-color: #3ece39; display: block; border-radius: 20px;">
-                <a href="tel:+84905776415" style="color:white; text-decoration: none;">Call now!</a>
+            <div class="call-button">
+                <a href="tel:+84905776415">Call now</a>
             </div>
         </div>
         <div style="display: none;">
