--- a/public/burger.html
+++ b/public/burger.html
@@ -38,13 +38,13 @@
                 </ul>
                 <div id="flags">
                     <a href="./burger#vie" id="vietnamese" style="float: right; margin-right: 50px; "><img
-                        style="height: 40px; padding-top: 10px;" src="images/Vie-icon.jpg"></a>
+                            style="height: 40px; padding-top: 10px;" src="images/Vie-icon.jpg"></a>
                     <a href="./burger#eng" id="english" style="float: right; margin-right: 20px; "><img
                             style="height: 40px; padding-top: 10px;" src="images/Eng-icon.jpg"></a>
                 </div>
             </nav>
-            <div class="taste-text"><img style="margin-top: 70px; margin-left: 5vw; width: 80%;"
-                    src="./images/Tatse-text.png"></div>
+            <div class="taste-text"><img style="margin-top: 30px; margin-left: 6vw; width: 90%;"
+                    src="./images/DanangBurger.png"></div>
             <div class="let-taste-text">
                 <ul id="texttaste">Let’s taste the best burger in town with the fairest price</ul>
                 <button id="btn-explore">CHECK IT OUT</button>
@@ -64,24 +64,37 @@
             </div>
             <div class="blank-space-resize"></div>
         </div>
-        </div><div class="unique-product">
-            <div  style="width: 50%; font-family: 'UVNSachVo'; margin-left: 50px;">
+        <div class="unique-product">
+            <div style="width: 50%; font-family: 'UVNSachVo'; margin-left: 50px;">
                 <div class="unique-product-title">OUR UNIQUE PRODUCT</div>
-                <div class="unique-product-description" id="unique-product-description">You have Pizza on top of your Burger.</br>
+                <div class="unique-product-description" id="unique-product-description">You have Pizza on top of your
+                    Burger.</br>
                     You can choose your top and your middle your own.</br>
                     We call it Pizza Burger.
                 </div>
                 <div class="top-middle-text">TOP</div>
                 <div style="display: flex; margin-left: 30px;">
-                    <div class="burger-pizza-card"><img src="./images/IconMincedBeef.jpg"><div id="minced-beef-text">Minced Beef</div></div>
-                    <div class="burger-pizza-card"><img src="./images/IconSausage.jpg"><div id="sausage-text">Sausage</div></div>
-                    <div class="burger-pizza-card"><img src="./images/IconSmokedBacon.jpg"><div id="smoked-bacon-text">Smoked Bacon</div></div>
+                    <div class="burger-pizza-card"><img src="./images/IconMincedBeef.jpg">
+                        <div id="minced-beef-text">Minced Beef</div>
+                    </div>
+                    <div class="burger-pizza-card"><img src="./images/IconSausage.jpg">
+                        <div id="sausage-text">Sausage</div>
+                    </div>
+                    <div class="burger-pizza-card"><img src="./images/IconSmokedBacon.jpg">
+                        <div id="smoked-bacon-text">Smoked Bacon</div>
+                    </div>
                 </div>
                 <div class="top-middle-text">MIDDLE</div>
                 <div style="display: flex; margin-left: 30px;">
-                    <div class="burger-pizza-card"><img src="./images/IconSmokedBacon.jpg"><div id="smoked-bacon-text-2">Smoked Bacon</div></div>
-                    <div class="burger-pizza-card"><img src="./images/IconBeefBelly.jpg"><div id="beef-belly-text">Beef Belly</div></div>
-                    <div class="burger-pizza-card"><img src="./images/IconBeefPatty.jpg"><div id="beef-patty-text">Beef Patty</div></div>
+                    <div class="burger-pizza-card"><img src="./images/IconSmokedBacon.jpg">
+                        <div id="smoked-bacon-text-2">Smoked Bacon</div>
+                    </div>
+                    <div class="burger-pizza-card"><img src="./images/IconBeefBelly.jpg">
+                        <div id="beef-belly-text">Beef Belly</div>
+                    </div>
+                    <div class="burger-pizza-card"><img src="./images/IconBeefPatty.jpg">
+                        <div id="beef-patty-text">Beef Patty</div>
+                    </div>
                 </div>
             </div>
             <div style="width: 50%;"><img style="width: 100%;" src="./images/PizzaBurger.png"></div>
@@ -103,76 +116,83 @@
             <div class="blank-space-resize"></div>
         </div>
         <div id="products-cards-hotdog">
-            <ul style="font-size: 90pt; font-family: 'Masterplan'; margin-left: 7vw; color: #6d3109;">We also have HOTDOGS</ul>
+            <ul style="font-size: 90pt; font-family: 'Masterplan'; margin-left: 7vw; color: #6d3109;">We also have
+                HOTDOGS</ul>
         </div>
         <div class="blank-space-resize"></div>
-        <footer>
-            <div style="width: 100%;">
-                <div class="blank-space-footer"></div>
-                <div style="display: flex; font-family: 'UVNHongHaHep'; color: white; font-size: 18px;">
-                    <img style="width: 117px; height: 72px;" src="./images/logo.png">
-                    <div style="margin-left: 30px; width: 40%;">
-                        <ul style="color: #e74e4e; font-size: 30px;">Đà Nẵng</ul>
-                        <ul>03 Lê Thánh Tôn street, Hải Châu district</ul>
-                        <ul>Lô 16-18 An Thượng 32 street, Ngũ Hành Sơn district</ul>
-                        <ul style="color: #e74e4e; font-size: 30px;">Hội An</ul>
-                        <ul>54 Nguyễn Thị Minh Khai street, Cẩm Phô</ul>
-                    </div>
-                    <div style="margin-left: 30px; display: grid; width: 20%;">
-                        <ul style="color: #e74e4e; font-size: 30px;">Products</ul>
-                        <a class="link" href="./burger">Burgers</a>
-                        <a class="link" href="./pizza">Pizzas</a>
-                        <a class="link">Hotdogs</a>
-                        <a class="link" href="./gelato">Gelato</a>
-                        <a class="link" href="./services">Services</a>
-                    </div>
-                    <div style="margin-left: 30px; width: 40%;">
-                        <ul style="color: #e74e4e; font-size: 30px;">Contact</ul>
-                        <ul>Tel: 0905 776 415</ul>
-                        <ul>Mail: aroa1lqd@gmail.com</ul>
-                        <ul style="color: #e74e4e; font-size: 30px;">Head Quarter</ul>
-                        <ul>20 Trần Tống street, Thanh Khê district, Đà Nẵng city </ul>
-                    </div>
+    </div>
+    <footer>
+        <div style="width: 100%;">
+            <div class="blank-space-footer"></div>
+            <div style="display: flex; font-family: 'UVNHongHaHep'; color: white; font-size: 18px;">
+                <img style="width: 117px; height: 72px;" src="./images/logo.png">
+                <div style="margin-left: 30px; width: 40%;">
+                    <ul style="color: #e74e4e; font-size: 30px;">Đà Nẵng</ul>
+                    <ul>03 Lê Thánh Tôn street, Hải Châu district</ul>
+                    <ul>Lô 16-18 An Thượng 32 street, Ngũ Hành Sơn district</ul>
+                    <ul style="color: #e74e4e; font-size: 30px;">Hội An</ul>
+                    <ul>54 Nguyễn Thị Minh Khai street, Cẩm Phô</ul>
                 </div>
-                <div style="margin-top: 40px; display: flex;">
-                    <div style="width: 55%;">
-                        <div style="display: flex;">
-                            <a href="https://www.facebook.com/ivodelidanang/" style="margin-right: 25px;"><img
-                                    src="./images/logo-fb.png"></ul></a>
-                            <a href="https://www.instagram.com/ivodeli/" style="margin-right: 25px;"><img
-                                    src="./images/logo-ig.png"></ul></a>
-                            <a href="https://www.foody.vn/thuong-hieu/ivo-deli-banh-mi-hotdog-kem-y-gelato"
-                                style="margin-right: 25px;"><img src="./images/logo-foody.png"></ul></a>
-                            <a href="https://food.grab.com/vn/en/restaurant/ivo-deli-burger-kem-%C3%BD-gelato-l%C3%AA-th%C3%A1nh-t%C3%B4n-delivery/VNGFVN000008kt"
-                                style="margin-right: 25px;"><img src="./images/logo-grabfood.png"></ul></a>
-                        </div>
-                        <div
-                            style="display: flex; font-family: 'UVNHongHaHep'; color: #b3b3b3; font-size: 18px; margin-top: 20px;">
-                            <ul style="margin-right: 40px;">Copyright 2020, IVO DELI by Jason Anger</ul>
-                            <ul style="margin-right: 40px;">Privacy</ul>
-                            <ul style="margin-right: 40px;">Term of Service</ul>
-                        </div>
-                    </div>
-                    <div style="width: 45%;"><a id="back-to-top"><img style="float: right;"
-                                src="./images/Back to TOP.png"></a></div>
+                <div style="margin-left: 30px; display: grid; width: 20%;">
+                    <ul style="color: #e74e4e; font-size: 30px;">Products</ul>
+                    <a class="link" href="./burger">Burgers</a>
+                    <a class="link" href="./pizza">Pizzas</a>
+                    <a class="link">Hotdogs</a>
+                    <a class="link" href="./gelato">Gelato</a>
+                    <a class="link" href="./services">Services</a>
                 </div>
-                <div style="height: 30px; width: 100%;"></div>
+                <div style="margin-left: 30px; width: 40%;">
+                    <ul style="color: #e74e4e; font-size: 30px;">Contact</ul>
+                    <ul>Tel: 0905 776 415</ul>
+                    <ul>Mail: aroa1lqd@gmail.com</ul>
+                    <ul style="color: #e74e4e; font-size: 30px;">Head Quarter</ul>
+                    <ul>20 Trần Tống street, Thanh Khê district, Đà Nẵng city </ul>
+                </div>
             </div>
-        </footer>
+            <div style="margin-top: 40px; display: flex;">
+                <div style="width: 55%;">
+                    <div style="display: flex;">
+                        <a href="https://www.facebook.com/ivodelidanang/" style="margin-right: 25px;"><img
+                                src="./images/logo-fb.png"></ul></a>
+                        <a href="https://www.instagram.com/ivodeli/" style="margin-right: 25px;"><img
+                                src="./images/logo-ig.png"></ul></a>
+                        <a href="https://www.foody.vn/thuong-hieu/ivo-deli-banh-mi-hotdog-kem-y-gelato"
+                            style="margin-right: 25px;"><img src="./images/logo-foody.png"></ul></a>
+                        <a href="https://food.grab.com/vn/en/restaurant/ivo-deli-burger-kem-%C3%BD-gelato-l%C3%AA-th%C3%A1nh-t%C3%B4n-delivery/VNGFVN000008kt"
+                            style="margin-right: 25px;"><img src="./images/logo-grabfood.png"></ul></a>
+                    </div>
+                    <div
+                        style="display: flex; font-family: 'UVNHongHaHep'; color: #b3b3b3; font-size: 18px; margin-top: 20px;">
+                        <ul style="margin-right: 40px;">Copyright 2020, IVO DELI by Jason Anger</ul>
+                        <ul style="margin-right: 40px;">Privacy</ul>
+                        <ul style="margin-right: 40px;">Term of Service</ul>
+                    </div>
+                </div>
+                <div style="width: 45%;"><a id="back-to-top"><img style="float: right;"
+                            src="./images/Back to TOP.png"></a></div>
+            </div>
+            <div style="height: 30px; width: 100%;"></div>
+        </div>
+    </footer>
     </div>
     <script>
-        document.getElementById("vietnamese").onclick = function(){
+        document.getElementById("btn-explore").onclick = function () {
+            setTimeout(function () {
+                $('html, body').animate({ scrollTop: document.getElementById('products-cards-burger').offsetTop }, 1000);
+            }, 500)
+        }
+        document.getElementById("vietnamese").onclick = function () {
             window.location.hash = '#vie';
             window.location.reload();
         }
-        document.getElementById("english").onclick = function(){
+        document.getElementById("english").onclick = function () {
             window.location.hash = '#eng';
             window.location.reload();
         }
-        if(window.location.hash == '#hotdog') {
-            setTimeout(function() { 
-                $('html, body').animate({ scrollTop: document.getElementById('products-cards-hotdog').offsetTop }, 1000); 
-                },500)
+        if (window.location.hash == '#hotdog') {
+            setTimeout(function () {
+                $('html, body').animate({ scrollTop: document.getElementById('products-cards-hotdog').offsetTop }, 1000);
+            }, 500)
         }
         if (window.location.hash == "#vie") {
             document.getElementById("unique-product-description").innerHTML = "Bạn sẽ được thêm một lớp Pizza phía trên Burger.</br>Chúng tôi gọi nó là Pizza Burger."
